<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_bar"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="#D3D3D3"
            app:boxStrokeWidth="2dp"
            app:helperText="Search app here"
            app:helperTextEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bell"
            app:layout_constraintStart_toEndOf="@id/search_bar"
            app:layout_constraintTop_toTopOf="@id/search_bar"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/first_row"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/first_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView01"
            android:layout_width="410dp"
            android:layout_height="140dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_row" />

        <TextView
            android:id="@+id/second_row"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/second_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView01" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView02"
            android:layout_width="410dp"
            android:layout_height="140dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_row" />

        <TextView
            android:id="@+id/third_row"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/third_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView02" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView03"
            android:layout_width="410dp"
            android:layout_height="140dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/third_row" />

        <TextView
            android:id="@+id/fouth_row"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/fouth_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView03" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView04"
            android:layout_width="410dp"
            android:layout_height="140dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fouth_row" />

        <TextView
            android:id="@+id/fifth_row"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/fifth_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView04"
            tools:ignore="VisualLintBounds" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView05"
            android:layout_width="410dp"
            android:layout_height="140dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fifth_row" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

